FIX bluffers panel in landscape mode re overlapping background

--- a/assets/css/autoprefixerstyle.css
+++ b/assets/css/autoprefixerstyle.css
@@ -1898,9 +1898,6 @@ footer p {
     #bluffers-section {
         height:210vh;
         margin-top:20px;
-        border:3px solid var(--snow);
-        border-radius:20px;
-        background-color: var(--antarcticblue);
     }
 
     #links-container {
